fixed layout of find a job search input field on safari
for some reason safari has decided to mangle this by default.
adding -webkit-appearance: none makes the input field display as it should.

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -109,6 +109,7 @@
     padding: $common-spacing/2 $common-spacing
     transition: $main-transition-duration
     width: 100%
+    -webkit-appearance: none
 
     &:focus
       border-color: $color-main
